DICL Rust Implementation (#3113)
* add rust boilerplate

* avoid naming collision with DiclConfig

* add bindings

* add python

* refactor rust code

* refactor bindings

* refactor python

* Rename DICLOptimizationConfig.ts to DiclOptimizationConfig.ts

* Rename DICLOptimizationJobHandle.ts to DiclOptimizationJobHandle.ts

* Rename UninitializedDICLOptimizationConfig.ts to UninitializedDiclOptimizationConfig.ts

* temporary launch

* update args and output

* concurent batch embedding rust

* update bindings

* update python

* update launch_optimization

* use ExternalDataInfo

* add unit tests

* fix mock test

* remove job_id, etc from job handle

* remove clickhouse rebind

* return 400 if model empty

* dicl does not support image data

* use semephore

* move clickhouse tests

* add config to Optimizer launch trait

* implement logic using config

* remove provider from config rust

* remove provider from config bindings

* remove provider from config python

* throw error on empty training examples

* OptimizerOuput: use adjacently tagged pattern rust

* OptimizerOuput: use adjacently tagged pattern bindings

* remove api_base

* remove api_base bindings

* remove api_base python

* use idiomatic retries

* serialize stored input

* add dummy embedding model for mock tests

* fix pyright error

* remove job_url

* remove retries from python client until retries decision made

* add read tests

* remove retries from DiclOptimizationConfig

* rename dicl e2e tests with batch in name

--- a/tensorzero-core/tests/e2e/tensorzero.toml
+++ b/tensorzero-core/tests/e2e/tensorzero.toml
@@ -764,10 +764,17 @@ non_streaming = { total_ms = 1000 }
 type = "dummy"
 model_name = "slow"
 
+[embedding_models.dummy-embedding-model]
+routing = ["dummy"]
+
+[embedding_models.dummy-embedding-model.providers.dummy]
+type = "dummy"
+model_name = "test-embeddings"
+
 
 # ┌────────────────────────────────────────────────────────────────────────────┐
 # │                                 FUNCTIONS                                  │
-# └────────────────────────────────────────────────────────────────────────────┘
+# └────────────────────────────────────────────────────────────────────────────────┘
 
 # Timeout tests
 
