use tensorzero sft tools

--- a/recipes/supervised_fine_tuning/axolotl/pyproject.toml
+++ b/recipes/supervised_fine_tuning/axolotl/pyproject.toml
@@ -2,7 +2,7 @@
 name = "tensorzero-recipe-sft-axolotl-metrics"
 version = "0.0.0"
 readme = "README.md"
-requires-python = ">=3.9"
+requires-python = ">=3.11,<3.12"
 dependencies = [
     "awscli",
     "clickhouse-connect",
@@ -15,7 +15,7 @@ dependencies = [
     "pandas",
     "pydantic",
     "setuptools",
-    "tensorzero>=2025.5.9",
+    "tensorzero",
     "toml",
     "torch==2.6.0",
     "wheel",
