--- a/recipes/supervised_fine_tuning/axolotl/.devcontainer/devcontainer.json
+++ b/recipes/supervised_fine_tuning/axolotl/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
 {
   "name": "Axolotl Container",
-  "image": "axolotlai/axolotl-base:latest",
+  "image": "axolotlai/axolotl-base:main-base-py3.11-cu126-2.6.0",
   "features":  {
     "ghcr.io/devcontainers/features/docker-in-docker:2": {}
   },
