--- a/tensorzero-core/tests/e2e/docker-compose.live.yml
+++ b/tensorzero-core/tests/e2e/docker-compose.live.yml
@@ -104,7 +104,13 @@ services:
       dockerfile: tensorzero-core/tests/e2e/Dockerfile.gateway.e2e
       target: gateway
     environment:
+      # Test environment variables
+      TENSORZERO_GATEWAY_URL: http://gateway:3000
       TENSORZERO_CLICKHOUSE_URL: http://chuser:chpassword@clickhouse:8123/tensorzero_e2e_tests
+      TENSORZERO_MINIO_URL: http://minio:9000/
+      TENSORZERO_E2E_PROXY: http://provider-proxy:3003
+      TENSORZERO_MOCK_INFERENCE_PROVIDER_BASE_URL: http://mock-inference-provider:3030
+      BUILDKITE_COMMIT: ${BUILDKITE_COMMIT:-}
       # API Keys
       ANTHROPIC_API_KEY: ${ANTHROPIC_API_KEY:-}
       AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID:-}
@@ -113,7 +119,6 @@ services:
       AZURE_OPENAI_API_BASE: ${AZURE_OPENAI_API_BASE:-}
       AZURE_OPENAI_API_KEY: ${AZURE_OPENAI_API_KEY:-}
       AZURE_OPENAI_DEPLOYMENT_ID: ${AZURE_OPENAI_DEPLOYMENT_ID:-}
-      TENSORZERO_E2E_PROXY: http://provider-proxy:3003
       DEEPSEEK_API_KEY: ${DEEPSEEK_API_KEY:-}
       FIREWORKS_API_KEY: ${FIREWORKS_API_KEY:-}
       FIREWORKS_ACCOUNT_ID: ${FIREWORKS_ACCOUNT_ID:-}
@@ -204,6 +209,8 @@ services:
       TENSORZERO_GATEWAY_URL: http://gateway:3000
       TENSORZERO_CLICKHOUSE_URL: http://chuser:chpassword@clickhouse:8123/tensorzero_e2e_tests
       TENSORZERO_MINIO_URL: http://minio:9000/
+      TENSORZERO_MOCK_INFERENCE_PROVIDER_BASE_URL: http://mock-inference-provider:3030
+      TENSORZERO_JAEGER_URL: http://jaeger:16686/
       TENSORZERO_E2E_PROXY: http://provider-proxy:3003
       BUILDKITE_COMMIT: ${BUILDKITE_COMMIT:-}
       # API Keys
