--- a/ci/dummy-env-file.env
+++ b/ci/dummy-env-file.env
@@ -12,7 +12,7 @@ export GCP_VERTEX_CREDENTIALS_PATH="/tmp/dummy-gcp-credentials.json"
 export GOOGLE_AI_STUDIO_API_KEY="dummy_google_key"
 export GROQ_API_KEY="dummy_groq_key"
 export HYPERBOLIC_API_KEY="dummy_hyperbolic_key"
-export LLAMA_API_KEY="dummy_llama_key"
+export LLAMA_API_KEY="dummy_llama_api_key"
 export MISTRAL_API_KEY="dummy_mistral_key"
 export OPENAI_API_KEY="dummy_openai_key"
 export OPENROUTER_API_KEY="dummy_openrouter_key"
