--- a/tensorzero-core/tests/e2e/docker-compose.replicated.yml
+++ b/tensorzero-core/tests/e2e/docker-compose.replicated.yml
@@ -83,7 +83,7 @@ services:
       timeout: 1s
 
   minio:
-    image: bitnami/minio:2025.4.22
+    image: bitnamilegacy/minio:2025.7.23
     ports:
       - "8000:9000" # API port
       - "9001:9001" # Console port
