--- a/.github/workflows/ui-tests-e2e-model-inference-cache.yml
+++ b/.github/workflows/ui-tests-e2e-model-inference-cache.yml
@@ -21,8 +21,8 @@ on:
         type: boolean
 
 jobs:
-  ui-tests-e2e:
-    runs-on: ${{ inputs.regen_cache && 'namespace-profile-tensorzero-8x16' || 'namespace-profile-tensorzero-16x32' }}
+  ui-tests-e2e-regen-model-inference-cache:
+    runs-on: ${{ inputs.regen_cache && 'namespace-profile-tensorzero-2x8' || 'namespace-profile-tensorzero-8x16' }}
     # We currently only run this job when we have secrets available, since we need to use an S3 object_store
     # In the future, we might want to fix this so that it can run in PR CI for external (forked) PRs
     # For now, it just runs in the merge queue and on prs from the main repo
