--- a/.github/workflows/ui-tests-e2e-model-inference-cache.yml
+++ b/.github/workflows/ui-tests-e2e-model-inference-cache.yml
@@ -21,7 +21,7 @@ on:
         type: boolean
 
 jobs:
-  ui-tests-e2e:
+  ui-tests-e2e-model-inference-cache:
     runs-on: ${{ inputs.regen_cache && 'namespace-profile-tensorzero-8x16' || 'namespace-profile-tensorzero-16x32' }}
     # We currently only run this job when we have secrets available, since we need to use an S3 object_store
     # In the future, we might want to fix this so that it can run in PR CI for external (forked) PRs
