--- a/tensorzero-core/tests/e2e/docker-compose.clickhouse.yml
+++ b/tensorzero-core/tests/e2e/docker-compose.clickhouse.yml
@@ -58,6 +58,7 @@ services:
       timeout: 1s
 
   fixtures:
+    image: tensorzero/fixtures:${TENSORZERO_FIXTURES_TAG:-latest}
     build:
       dockerfile: ../../../ui/fixtures/Dockerfile
     volumes:
