--- a/ui/fixtures/docker-compose.e2e.ci.yml
+++ b/ui/fixtures/docker-compose.e2e.ci.yml
@@ -74,6 +74,7 @@ services:
       timeout: 1s
 
   fixtures:
+    image: tensorzero/fixtures:${TENSORZERO_FIXTURES_TAG:-latest}
     build:
       dockerfile: Dockerfile
     volumes:
