--- a/ci/buildkite/merge-queue-tests.yml
+++ b/ci/buildkite/merge-queue-tests.yml
@@ -15,6 +15,14 @@ steps:
         - exit_status: "*"
           limit: 3
 
+  - label: "Build Fixtures Container"
+    command: bash ./ci/buildkite/build-fixtures-container.sh"
+    key: "build-fixtures-container"
+    retry:
+      automatic:
+        - exit_status: "*"
+          limit: 3
+
   - label: "Build Mock Inference Provider Container"
     command: bash ./ci/buildkite/build-mock-inference-provider-container.sh
     key: "build-mock-inference-provider-container"
@@ -108,6 +116,7 @@ steps:
     depends_on:
       - "build-gateway-container"
       - "build-node-unit-tests-container"
+      - "build-fixtures-container"
 
   - label: ":playwright: UI E2E Tests (without LLM credentials)"
     command: |
@@ -117,6 +126,7 @@ steps:
       - "build-mock-inference-provider-container"
       - "build-ui-container"
       - "build-ui-e2e-tests-container"
+      - "build-fixtures-container"
     artifact_paths:
       - "ui/fixtures/ui-e2e-artifacts.zip"
 
@@ -134,6 +144,7 @@ steps:
       - "build-gateway-e2e-container"
       - "build-clickhouse-tests-container"
       - "download-fixtures"
+      - "build-fixtures-container"
 
   - label: "Live Tests"
     command: bash ./ci/buildkite/live-tests.sh
@@ -144,3 +155,4 @@ steps:
       - "modal-warmup"
       - "download-provider-proxy-cache"
       - "build-live-tests-container"
+      - "build-fixtures-container"
