Make glob message prettier

--- a/gateway/Cargo.toml
+++ b/gateway/Cargo.toml
@@ -32,4 +32,5 @@ default = []
 [dev-dependencies]
 reqwest.workspace = true
 tempfile = "3.21.0"
-tensorzero = { path = "../clients/rust"}
+tensorzero = { path = "../clients/rust" }
+tracing-test = "0.2"
