--- a/tensorzero-core/tests/e2e/Dockerfile.live
+++ b/tensorzero-core/tests/e2e/Dockerfile.live
@@ -59,20 +59,13 @@ RUN rm -rf target
 COPY --from=builder /app/target/debug/evaluations /app/target/debug/
 COPY --from=builder /app/target/debug/gateway /app/target/debug/
 
-# Add this in your test-env stage after copying binaries
-RUN echo "Host architecture: $(uname -m)" && \
-    echo "Binary file info:" && \
-    file /app/target/debug/evaluations && \
-    ldd /app/target/debug/evaluations || echo "Not a dynamic executable"
-
-# Test execution from the same context as the test
-RUN echo "=== Testing from container context ===" && \
-    CARGO_BIN_EXE_evaluations=/app/target/debug/evaluations && \
-    echo "Testing with path: $CARGO_BIN_EXE_evaluations" && \
-    $CARGO_BIN_EXE_evaluations 2>&1 || echo "Container execution failed with exit code: $?"
-
 # Copy only the test archive instead of entire target directory
 COPY --from=builder /app/tests.tar.zst /app/tests.tar.zst
+
+# Copy the populated Cargo caches from the builder stage.
+# This is necessary for dependencies required at test *runtime*, like with trybuild.
+COPY --from=builder /usr/local/cargo/registry /usr/local/cargo/registry
+COPY --from=builder /usr/local/cargo/git /usr/local/cargo/git
 
 # Install cargo-nextest in this stage too (for running tests)
 RUN cargo binstall -y cargo-nextest --secure
