--- a/.config/nextest.toml
+++ b/.config/nextest.toml
@@ -25,9 +25,7 @@ slow-timeout = { period = "20s", terminate-after = 3 }
 # The profile can be set with '--profile <profile-name>' when using 'cargo nextest run',
 # We also define cargo aliases for common use-cases (e.g. `cargo test-e2e`)
 [profile.e2e]
-# temporarily disabled
-# retries = { backoff = "exponential", count = 4, delay = "5s", jitter = true, max-delay = "60s" }
-retries = { backoff = "fixed", count = 0 }
+retries = { backoff = "exponential", count = 4, delay = "5s", jitter = true, max-delay = "60s" }
 default-filter = "not (test(batch)) and not (test(test_dummy_only) | test(clickhouse))"
 junit.path = "junit.xml"
 
@@ -90,8 +88,7 @@ test-group = 'e2e_aws_sagemaker_tgi'
 filter = 'binary(e2e) and test(providers::groq::)'
 test-group = 'e2e_groq'
 # We have a low rate limit on Groq, so we often need to retry several times
-# temporary
-# retries = { backoff = "exponential", count = 8, delay = "5s", jitter = true, max-delay = "120s" }
+retries = { backoff = "exponential", count = 8, delay = "5s", jitter = true, max-delay = "120s" }
 
 [[profile.default.overrides]]
 filter = 'binary(e2e) and test(providers::vllm::)'
@@ -100,8 +97,7 @@ slow-timeout = { period = "60s", terminate-after = 2 }
 [[profile.default.overrides]]
 filter = 'binary(e2e) and test(providers::sglang::)'
 # The model we run on SGLang often fails to emit valid tool calls, so we need many retries
-# temporary
-# retries = { backoff = "fixed", count = 8, delay = "10s", jitter = true }
+retries = { backoff = "fixed", count = 8, delay = "10s", jitter = true }
 slow-timeout = { period = "60s", terminate-after = 2 }
 
 [[profile.default.overrides]]
@@ -128,5 +124,4 @@ slow-timeout = { period = "10s", terminate-after = 1 }
 
 [[profile.default.overrides]]
 filter = 'binary(e2e) and (test(providers::aws_bedrock::) or test(providers::aws_sagemaker))'
-# temporary
-# retries = { backoff = "exponential", count = 8, delay = "5s", jitter = true, max-delay = "120s" }
+retries = { backoff = "exponential", count = 8, delay = "5s", jitter = true, max-delay = "120s" }
