--- a/ui/fixtures/docker-compose.yml
+++ b/ui/fixtures/docker-compose.yml
@@ -69,7 +69,8 @@ services:
 
   fixtures:
     build:
-      dockerfile: Dockerfile
+      context: ../../
+      dockerfile: ui/fixtures/Dockerfile
     volumes:
       - .:/fixtures
       - ~/.aws:/root/.aws
