--- a/tensorzero-core/tests/e2e/docker-compose.yml
+++ b/tensorzero-core/tests/e2e/docker-compose.yml
@@ -94,7 +94,7 @@ services:
       timeout: 1s
   fixtures:
     build:
-      dockerfile: ../../../ui/fixtures/Dockerfile
+      dockerfile: ui/fixtures/Dockerfile
       context: ../../..
     volumes:
       - ../../../ui/fixtures:/fixtures
