all tests passing except those broken on main

--- a/ui/fixtures/docker-compose.unit.yml
+++ b/ui/fixtures/docker-compose.unit.yml
@@ -58,7 +58,8 @@ services:
   fixtures:
     image: tensorzero/fixtures:${TENSORZERO_FIXTURES_TAG:-latest}
     build:
-      dockerfile: Dockerfile
+      context: ../..
+      dockerfile: ui/fixtures/Dockerfile
     volumes:
       - .:/fixtures
       - ~/.aws:/root/.aws
