--- a/ui/fixtures/docker-compose.e2e.yml
+++ b/ui/fixtures/docker-compose.e2e.yml
@@ -76,7 +76,7 @@ services:
   fixtures:
     build:
       context: ../../
-      dockerfile: Dockerfile
+      dockerfile: ui/fixtures/Dockerfile
     volumes:
       - .:/fixtures
       - ~/.aws:/root/.aws
