--- a/.github/workflows/buildkite-test-suite.yml
+++ b/.github/workflows/buildkite-test-suite.yml
@@ -4,9 +4,8 @@ run-name: "Buildkite Test Suite: ${{ github.event.pull_request.title || github.r
 on:
   workflow_dispatch:
 
-  # Temporarily disabled
-  # pull_request:
-  #   branches: ["main"]
+  pull_request:
+    branches: ["main"]
 
 jobs:
   unit-tests:
