--- a/ci/buildkite/pr-tests.yml
+++ b/ci/buildkite/pr-tests.yml
@@ -102,7 +102,7 @@ steps:
       setup:
         clickhouse_version:
           - "24.12-alpine"
-          - "latest-alpine"
+          - "25.7-alpine"
     env:
       TENSORZERO_CLICKHOUSE_VERSION: "{{matrix.clickhouse_version}}"
     depends_on:
