--- a/gateway/Cargo.toml
+++ b/gateway/Cargo.toml
@@ -37,3 +37,9 @@ serde_json = { workspace = true }
 serde_yaml = { workspace = true }
 jsonschema = { workspace = true }
 tokio = { workspace = true, features = ["macros"] }
+
+[build-dependencies]
+reqwest     = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
+serde_json  = "1"
+serde_yaml  = "0.9"
+
