--- a/Cargo.toml
+++ b/Cargo.toml
@@ -92,6 +92,7 @@ unnecessary_wraps = "deny"
 unreachable = "deny"
 unused_self = "deny"
 unwrap_used = "deny"
+inconsistent_struct_constructor = "deny"
 
 [profile.performance]
 inherits = "release"
