--- a/Cargo.toml
+++ b/Cargo.toml
@@ -79,6 +79,7 @@ ignored_unit_patterns = "deny"
 manual_string_new = "deny"
 match_bool = "deny"
 needless_raw_string_hashes = "deny"
+or_fun_call = "deny"
 panic = "deny"
 print_stderr = "deny"
 print_stdout = "deny"
