--- a/.github/workflows/cancel-stale-merge-queue.yml
+++ b/.github/workflows/cancel-stale-merge-queue.yml
@@ -12,7 +12,7 @@ jobs:
   cancel-workflows:
     name: Cancel Workflow Runs
     runs-on: ubuntu-latest
-    if: github.event.reason != 'merged'
+    if: github.repository == 'tensorzero/tensorzero' && github.event.reason != 'merged'
     steps:
       - name: Get Merge Queue Commit SHA
         id: get-sha
@@ -26,7 +26,7 @@ jobs:
           # Get all workflow runs for the specific SHA
           workflow_runs=$(curl -s -H "Authorization: Bearer ${{ github.token }}" \
             "https://api.github.com/repos/${{ github.repository }}/actions/runs?head_sha=${{ github.sha }}")
-          
+
           # Extract run IDs and cancel them (except current workflow)
           current_run_id="${{ github.run_id }}"
           echo "Current Run ID: $current_run_id"
