--- a/.github/workflows/slash-command-regen-fixtures.yml
+++ b/.github/workflows/slash-command-regen-fixtures.yml
@@ -18,6 +18,7 @@ permissions:
 jobs:
   regen-fixtures:
     runs-on: namespace-profile-tensorzero-8x16
+    if: github.repository == 'tensorzero/tensorzero'
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
         with:
