--- a/tensorzero-core/tests/e2e/docker-compose.replicated.yml
+++ b/tensorzero-core/tests/e2e/docker-compose.replicated.yml
@@ -118,7 +118,7 @@ services:
       dockerfile: gateway/Dockerfile
       target: gateway
     environment:
-      TENSORZERO_CLICKHOUSE_URL: http://chuser:chpassword@clickhouse-01:8123/tensorzero_e2e_tests
+      TENSORZERO_CLICKHOUSE_URL: http://chuser:chpassword@clickhouse-01:8123/${TENSORZERO_E2E_TESTS_DATABASE:-tensorzero_e2e_tests}
       TENSORZERO_CLICKHOUSE_CLUSTER_NAME: tensorzero_e2e_tests_cluster
     depends_on:
       clickhouse-01:
@@ -160,7 +160,7 @@ services:
       [
         "bash",
         "-c",
-        "cd /fixtures && ./load_fixtures.sh tensorzero_e2e_tests && sleep infinity",
+        "cd /fixtures && ./load_fixtures.sh ${TENSORZERO_E2E_TESTS_DATABASE:-tensorzero_e2e_tests} && sleep infinity",
       ]
     healthcheck:
       test: ["CMD", "test", "-f", "/load_complete.marker"]
