Handle clippy::missing_panics_doc

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -78,6 +78,7 @@ if_not_else = "deny"
 ignored_unit_patterns = "deny"
 manual_string_new = "deny"
 match_bool = "deny"
+missing_panics_doc = "deny"
 needless_raw_string_hashes = "deny"
 panic = "deny"
 print_stderr = "deny"
