go back to original

--- a/examples/data-extraction-ner/config/tensorzero.toml
+++ b/examples/data-extraction-ner/config/tensorzero.toml
@@ -28,7 +28,7 @@ json_mode = "strict"
 
 # [functions.extract_entities.variants.gpt_4o_mini_dicl]
 # type = "experimental_dynamic_in_context_learning"
-# embedding_model = "text-embedding-3-small"
+# embedding_model = "openai::text-embedding-3-small"
 # model = "openai::gpt-4o-mini-2024-07-18"
 # k = 10
 # system_instructions = "functions/extract_entities/initial_prompt/system_template.minijinja"
