Cancel stale workflows in PRs

--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -8,11 +8,9 @@ on:
   pull_request:
     branches: ["main"]
 
-# When triggered from the merge queue, cancel any existing workflow runs for the same PR branch
-# Otherwise, use the unique run id for the concurrency group, to prevent anything from getting cancelled
 concurrency:
-  group: ${{ github.event_name == 'merge_group' && format('{0}-{1}', github.workflow, github.ref) || github.run_id }}
-  cancel-in-progress: true
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: ${{ github.ref != 'refs/heads/main' }}
 
 env:
   FORCE_COLOR: 1
