--- a/ui/fixtures/docker-compose.e2e.yml
+++ b/ui/fixtures/docker-compose.e2e.yml
@@ -32,6 +32,7 @@ services:
       - "3030:3030"
     healthcheck:
       test: wget --spider --tries 1 http://localhost:3030/status
+      interval: 1s
       start_period: 30s
       start_interval: 1s
       timeout: 1s
