--- a/Cargo.toml
+++ b/Cargo.toml
@@ -80,6 +80,7 @@ manual_string_new = "deny"
 match_bool = "deny"
 missing_panics_doc = "deny"
 needless_raw_string_hashes = "deny"
+or_fun_call = "deny"
 panic = "deny"
 print_stderr = "deny"
 print_stdout = "deny"
