--- a/Cargo.toml
+++ b/Cargo.toml
@@ -76,6 +76,7 @@ expect_used = "deny"
 explicit_iter_loop = "deny"
 if_not_else = "deny"
 ignored_unit_patterns = "deny"
+manual_assert = "deny"
 manual_string_new = "deny"
 match_bool = "deny"
 missing_panics_doc = "deny"
