--- a/.github/workflows/merge-queue.yml
+++ b/.github/workflows/merge-queue.yml
@@ -222,6 +222,18 @@ jobs:
         run: |
           TENSORZERO_E2E_PROXY="http://localhost:3003" cargo test-e2e ${{ vars.CARGO_NEXTEST_EXTRA_ARGS }} -E "not (${{ vars.CARGO_NEXTEST_FLAKY_TESTS }})" ${{ github.event_name == 'schedule' && '--no-fail-fast' || '' }}
 
+      # Run OpenAI compliance tests against the embedded gateway.
+      # Validates TensorZero’s OpenAI-compatible endpoints against the official spec.
+      # Focused on schema correctness, not full provider E2E behavior.
+      # Live success-path tests remain optional and require provider credentials.
+      - name: Run OpenAI compliance tests against embedded gateway
+        env:
+          GATEWAY_BASE: http://localhost:3000
+          DISABLE_LIVE_OPENAI_TESTS: 0
+        run: |
+          cargo test --test openai_api_validation -- --nocapture
+
+
       # As a separate step, we run just the flaky tests, and allow them to fail.
       # This lets us see if any flaky tests have started succeeding (by looking at the job output),
       # so that we can decide to mark them as non-flaky.
