Allow lints that are too pedantic

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -69,6 +69,7 @@ mime = { git = "https://github.com/hyperium/mime", rev = "1ef137c7358fc64e07c8a6
 [workspace.lints.rust]
 unsafe_code = "forbid"
 
+# Note: Some pedantic lints are explicitly set to "allow" to give authors discretion on their use.
 [workspace.lints.clippy]
 allow_attributes = "deny"
 dbg_macro = "deny"
@@ -78,12 +79,14 @@ if_not_else = "deny"
 ignored_unit_patterns = "deny"
 manual_string_new = "deny"
 match_bool = "deny"
+match_same_arms = "allow"
 needless_raw_string_hashes = "deny"
 panic = "deny"
 print_stderr = "deny"
 print_stdout = "deny"
 redundant_closure_for_method_calls = "deny"
 semicolon-if-nothing-returned = "deny"
+single_match_else = "allow"
 todo = "deny"
 trivially_copy_pass_by_ref = "deny"
 unimplemented = "deny"
