--- a/Cargo.toml
+++ b/Cargo.toml
@@ -82,6 +82,7 @@ manual_string_new = "deny"
 match_bool = "deny"
 match_same_arms = "allow"
 missing_panics_doc = "deny"
+must_use_candidate = "allow"
 needless_raw_string_hashes = "deny"
 or_fun_call = "deny"
 panic = "deny"
